Use the minimal possible JDK with each example; update jee dependecies; split trampoline up to Pre-9 JDK and Post-9 JDK versions